# rust-gui-template

./: Cargo.toml  LICENSE  README.md
src/: core.rs  lib.rs  main.rs  renderer.rs
src/core/: application.rs  window.rs
