[package]
name = "rust-gui-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_gui_template"
path = "src/lib.rs"

[dependencies]
skia-safe = { version = "0.75.0", features = ["gl", "svg", "textlayout"] }
winit = "0.30.2"
glutin = "0.32.0"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.0"
gl = "0.14.0"